channels swagger api
